--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.terminus.chatroom">
+    package="com.websocket.shubhamjit">
 
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
+
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -16,38 +14,22 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
+   
         <activity
-            android:name=".Map.CustomerActivity"
-            android:exported="true">
+            android:name=".MainActivity"
+            android:exported="true" >
 
-            <intent-filter>
+              <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
 
-        </activity>
-        <activity
-            android:name=".Map.DeliveryBoyActivity"
-            android:exported="true">
+          </activity>
+       
 
 
-        </activity>
-        <activity
-            android:name=".MainActivity"
-            android:exported="true" />
-        <activity
-            android:name=".MapActivity"
-            android:exported="true"
-            android:screenOrientation="portrait">
-
-        </activity>
-
-
-
-        <meta-data
-            android:name="com.google.android.geo.API_KEY"
-            android:value="@string/google_maps_key2_ohhpro" />
+       
     </application>
 
 </manifest>
